# Aurelia

./: .gitignore  Aurelia.md  CMakeLists.txt  README.md  TEMPLATE.md  demo_perf.cpp  roadmap.md  scope.txt
docs/specs/: Hardware_Architecture.md  ISA_Reference.md  NAND_Physics.md
docs/tutorials/: Assembly_Guide.md
examples/: branch_test.s  empty.s  memory_test.s  string_test.s  test.s
src/: main.cpp
src/Bus/: Bus.cpp  Bus.hpp  BusDefs.hpp  IBusDevice.hpp
src/Core/: BitManip.hpp  Clock.cpp  Clock.hpp  ITickable.hpp  System.cpp  System.hpp  Types.hpp
src/Cpu/: Alu.cpp  Alu.hpp  AluDefs.hpp  Cpu.cpp  Cpu.hpp  CpuDefs.hpp  Decoder.cpp  Decoder.hpp  InstructionDefs.hpp
src/Memory/: RamDevice.cpp  RamDevice.hpp
src/Peripherals/: KeyboardDevice.cpp  KeyboardDevice.hpp  MouseDevice.cpp  MouseDevice.hpp  PicDevice.cpp  PicDevice.hpp  TimerDevice.cpp  TimerDevice.hpp  UartDevice.cpp  UartDevice.hpp
src/Storage/Controller/: StorageController.cpp  StorageController.hpp  StorageDefs.hpp
src/Storage/FTL/: Ftl.cpp  Ftl.hpp  FtlDefs.hpp
src/Storage/Nand/: NandChip.cpp  NandChip.hpp  NandDefs.hpp
src/System/: Loader.cpp  Loader.hpp  MemoryMap.hpp
src/Tools/Assembler/: Encoder.cpp  Encoder.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Resolver.cpp  Resolver.hpp  SymbolTable.hpp  asm.cpp
tests/: AluTests.cpp  AssemblerTests.cpp  AureliaTests_include-b12d07c.cmake  AureliaTests_tests-b12d07c.cmake  BusTests.cpp  CMakeLists.txt  ControllerTests.cpp  CoreTests.cpp  CpuPipelineTests.cpp  CpuTests.cpp  DecoderTests.cpp  EncoderTests.cpp  FtlPersistenceTest.cpp  FtlTests.cpp  MemoryTests.cpp  NandTests.cpp  ParserTests.cpp  ResolverTests.cpp  SystemIntegrationTests.cpp  SystemTests.cpp  UartTests.cpp
